force-app/main/default/objects/Case_Relationship__c/Case_Relationship__c.object-meta.xml
<CustomObject>
    <label>Application Participant</label>
    <nameField>
        <displayFormat>AP-{00000000}</displayFormat>
        <label>Application Participant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>