force-app/main/default/objects/Case_Relationship__c/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Application Participants</relationshipLabel>
    <relationshipName>Application_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>