force-app/main/default/objects/Case_Relationship__c/fields/Compliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Type__c</fullName>
    <label>Compliance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial appointment of compliance lawyer</fullName>
            </value>
            <value>
                <fullName>Change of compliance lawyer</fullName>
            </value>
            <value>
                <fullName>Renewal of compliance lawyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>