force-app/main/default/objects/Case_Relationship__c/fields/Do_not_Send_Sub_Application__c.field-meta.xml
<CustomField>
    <fullName>Do_not_Send_Sub_Application__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do not Send Sub Application</label>
    <type>Checkbox</type>
</CustomField>