force-app/main/default/objects/Case_Relationship__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <formula>IF( ISBLANK(Person_Account__r.PersonContact.Email),  Person_Account__r.POC_Email__c , Person_Account__r.PersonContact.Email)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Address</label>
    <type>Text</type>
</CustomField>