force-app/main/default/objects/Case_Relationship__c/fields/Full_Name_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>Full_Name_Read_Only__c</fullName>
    <formula>IF( ISBLANK(Person_Account__r.Name), Person_Account__r.FirstName &amp; &quot; &quot; &amp; Person_Account__r.MiddleName &amp; &quot; &quot; &amp; Person_Account__r.LastName, Person_Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name (Read Only)</label>
    <type>Text</type>
</CustomField>