force-app/main/default/objects/Case_Relationship__c/fields/Has_Economic_Interest__c.field-meta.xml
<CustomField>
    <fullName>Has_Economic_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Economic Interest</label>
    <type>Checkbox</type>
</CustomField>