force-app/main/default/objects/Case_Relationship__c/fields/Has_Previously_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Has_Previously_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Previously Submitted</label>
    <type>Checkbox</type>
</CustomField>