force-app/main/default/objects/Case_Relationship__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>