force-app/main/default/objects/Case_Relationship__c/fields/Person_Account__c.field-meta.xml
<CustomField>
    <fullName>Person_Account__c</fullName>
    <label>Participant</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Application Participants</relationshipLabel>
    <relationshipName>Case_Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>