force-app/main/default/objects/Case_Relationship__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF( Person_Account__r.RecordType.DeveloperName == &apos;PersonAccount&apos;, &apos;Individual&apos;, &apos;Entity&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>